pyson/parser.py
import math
import ast
import re
from keyword import iskeyword
from inspect import isgenerator, ismethod
from typing import *
from collections import (
    namedtuple,
    deque,
    Counter,
    OrderedDict,
    ChainMap
)
from .tokenize import *
from .util import *

class DataParseError(SyntaxError):
    def __init__(self, message, *args, **kwargs):
        if message is not None and not isinstance(message, str):
            raise TypeError(f"DataParseError() argument 1 must be a string, not {type(message).__name__!r}")

        if len(args) == 0:
            if len(kwargs) == 0:
                super().__init__(message)

            elif len(kwargs) == 1 and 'at' in kwargs:
                at = kwargs['at']
                if not isinstance(at, tuple) or len(at) != 4 or not isinstance(at[0], str) or not isinstance(at[1], int) or not isinstance(at[2], int) or not isinstance(at[3], str):
                    raise TypeError(f"DataParseError() 'at' keyword argument must be a (filename, line#, column#, line) tuple, not {at if isinstance(at, tuple) else type(at).__name__!r}")
                super().__init__(message, at)

            elif 'token' in kwargs and (len(kwargs) == 1 or len(kwargs) == 2 and 'filename' in kwargs):
                token = kwargs['token']
                if not isinstance(token, TokenInfo):
                    raise TypeError(f"DataParseError() 'token' keyword argument must be TokenInfo, not {type(token).__name__!r}")

                if 'filename' in kwargs:
                    filename = kwargs['filename']
                    if not isinstance(filename, str):
                        raise TypeError(f"DataParseError() 'filename' keyword argument must be a string, not {type(filename).__name__!r}")
                else:
                    filename = '<unknown source>'

                super().__init__(message, (filename, *token.start, token.line))

            else:
                if len(kwargs) == 2 and 'at' in kwargs and 'got' not in kwargs or len(kwargs) == 3:
                    args = set()
                    if 'at' in kwargs:
                        args.add('at')
                    if 'token' in kwargs:
                        args.add('token')
                    if 'filename' in kwargs:
                        args.add('filename')
                    raise ValueError("DataParseError() keyword arguments {0} are mutually exclusive".format(', '.join(repr(arg) for arg in args)))
                else:
                    raise ValueError("DataParseError() illegal keyword arguments " + ', '.join(repr(name) for name in set(kwargs.keys()) - {'token', 'filename', 'at'}))

        elif len(args) == 1:
            if len(kwargs) == 0:
                arg = args[0]
                if isinstance(arg, TokenInfo):
                    super().__init__(message, ('<unknown source>', *arg.start, arg.line))

                elif isinstance(arg, tuple):
                    if len(arg) != 4 or not isinstance(arg[0], str) or not isinstance(arg[1], int) or not isinstance(arg[2], int) or not isinstance(arg[3], str):
                        raise TypeError(f"DataParseError() argument 2 must be a (filename, line#, column#, line) tuple, not {type(arg).__name__!r}")

                    super().__init__(message, arg)

                else:
                    raise TypeError(f"DataParseError() argument 2 must be TokenInfo or a (filename, line#, column#, line) tuple, not {type(arg).__name__!r}")

            elif len(kwargs) == 1 and 'filename' in kwargs:
                if not isinstance(arg, TokenInfo):
                    raise TypeError(f"DataParseError() argument 2 must be TokenInfo, not {type(arg).__name__!r}")

                filename = kwargs['filename']
                if not isinstance(filename, str):
                    raise TypeError(f"DataParseError() 'filename' keyword argument must be a string, not {type(filename).__name__!r}")

                super().__init__(message, (filename, *arg.start, arg.line))

            elif len(kwargs) == 1 and 'token' in kwargs:
                if not isinstance(arg, str):
                    raise TypeError(f"DataParseError() argument 2 must be a string, not {type(arg).__name__!r}")
                
                token = kwargs['token']
                if not isinstance(token, TokenInfo):
                    raise TypeError(f"DataParseError() 'token' keyword argument must be TokenInfo, not {type(token).__name__!r}")

                super().__init__(message, (arg, *token.start, token.line))

            else:
                has_at = 'at' in kwargs or isinstance(arg, str) and 'token' not in kwargs
                has_token = 'token' in kwargs or isinstance(arg, TokenInfo)
                has_filename = 'filename' in kwargs or isinstance(arg, str) and has_token
                if len(kwargs) in (1,2,3) and (has_at or has_token or has_filename):
                    args = set()
                    if has_at:
                        args.add('at')
                    if has_token:
                        args.add('token')
                    if has_filename:
                        args.add('filename')
                    raise ValueError("DataParseError() keyword arguments {0} are mutually exclusive".format(', '.join(repr(arg) for arg in args)))

                else:
                    raise ValueError("DataParseError() illegal keyword arguments " + ', '.join(repr(name) for name in set(kwargs.keys()) - {'token', 'filename', 'at'}))

        elif len(args) == 2:
            if len(kwargs) != 0:
                raise ValueError("DataParseError() illegal keyword arguments " + ', '.join(repr(name) for name in kwargs))
            
            arg1 = args[0]
            arg2 = args[1]

            if isinstance(arg1, str):
                if not isinstance(arg2, TokenInfo):
                    raise TypeError(f"DataParseError() argument 3 must be TokenInfo, not {type(arg2).__name__!r}")
                filename = arg1
                token = arg2

            elif isinstance(arg1, TokenInfo):
                if not isinstance(arg2, str):
                    raise TypeError(f"DataParseError() argument 3 must be string, not {type(arg2).__name__!r}")
                filename = arg2
                token = arg1

            else:
                raise TypeError(f"DataParseError() argument 2 must be TokenInfo or string, not {type(arg1).__name__!r}")

            super().__init__(message, (filename, *token.start, token.line))

        else:
            raise ValueError("DataParseError() too many arguments")
        

def loadx(tokens, filename='<unknown source>', allow_Infinity_and_NaN=True):
    """ Loads PySON from a number of different data types:

    ``tokens`` can be a str, bytes, or bytearray object, 
    in which case ``loads`` is called.

    ``tokens`` can be a callable object,
    in which case it is assumed to be a ``readline`` method as
    described by the ``tokenize`` module.

    ``tokens`` can be a subclass of ``io.IOBase`` (a file pointer),
    in which case `tokenize` is called on the object's ``readline`` method.

    ``tokens`` can be an iterable of ``TokenInfo`` objects,
    in which case the object gets filtered to remove any ENCODING or COMMENT tokens.
    """
    if isinstance(tokens, (str, bytes, bytearray)):
        return loads(tokens, 'utf-8', allow_Infinity_and_NaN)
    else:
        if filename == '<unknown source>' and hasattr(tokens, 'name'):
            filename = tokens.name
        if callable(tokens):
            tokens = tokenize(tokens, yield_encoding=False, yield_comments=False)
        else:
            import io
            if isinstance(tokens, io.IOBase):
                tokens = tokenize(tokens.readline, yield_encoding=False, yield_comments=False)
            else:
                from inspect import isgenerator
                if not isgenerator(tokens):
                    try:
                        tokens = iter(tokens)
                    except TypeError as e:
                        raise TypeError(f"Don't know how to parse {type(tokens).__name__!r} instances") from e
                tokens = filter(lambda token: token.type not in (ENCODING, COMMENT), tokens)

        return loadt(tokens, filename, allow_Infinity_and_NaN)

def load(fp, allow_Infinity_and_NaN=True):
    """ Load PySON from a file pointer or file name

    This method expects the file to have been opened in 'rb' (read-binary) mode, if the argument is a file pointer.
    """
    if isinstance(fp, str):
        with open(fp, 'rb') as fp:
            tokens = tokenize(fp.readline, yield_encoding=False, yield_comments=False)
    else:
        tokens = tokenize(fp.readline, yield_encoding=False, yield_comments=False)

    return loadt(tokens, fp.name, allow_Infinity_and_NaN)

def loads(string, encoding='utf-8', allow_Infinity_and_NaN=True):
    """ Load PySON from a string or a bytes-like object """
    lines = iter(string.splitlines(keepends=True))
    if isinstance(string, str):
        def readline():
            return bytes(next(lines), encoding)
    elif isinstance(string, (bytes, bytearray)):
        def readline():
            return next(lines)
    else:
        raise TypeError("loads() argument needs to be either a string or bytes object")

    tokens = tokenize(readline, yield_encoding=False, yield_comments=False)

    return loadt(tokens, '<string>', allow_Infinity_and_NaN)

def loadt(tokens, filename='<unknown source>', allow_Infinity_and_NaN=True):
    """ Load PySON from an iterable of TokenInfos (as returned by pycson.tokenize(yield_encoding=False, yield_comments=False)) """
    return DataParser(tokens, filename, allow_Infinity_and_NaN).parse_all()
    # token: TokenInfo = None
    # last: TokenInfo = None
    
    # def expect(test):
    #     result = accept(test)
    #     if result:
    #         return result
    #     else:
    #         def make_test_str(test):
    #             if isinstance(test, str):
    #                 return repr(test)
    #             elif isinstance(test, int):
    #                 return tok_name[test]
    #             else:
    #                 def expand(t):
    #                     for elem in t:
    #                         if isinstance(elem, tuple):
    #                             yield from expand(elem)
    #                         else:
    #                             yield make_test_str(elem)
    #                 return ' or '.join(expand(test))
    #         raise DataParseError(f'expected {make_test_str(test)}, found {tok_name[token.exact_type]} {token.string!r}', filename, token)

    # def accept(test):
    #     result = token.string or True
    #     if has_next(test):
    #         proceed()
    #         return result

    # def has_next(test):
    #     return tok_match(token, test)

    # def tok_match(token, test):
    #     if isinstance(test, tuple):
    #         for elem in test:
    #             if tok_match(token, elem):
    #                 return True
    #         else:
    #             return False
    #     elif isinstance(test, str):
    #         return token.string == test
    #     elif isinstance(test, int):
    #         return token.exact_type == test
    #     else:
    #         raise ValueError(f'must be string or int or a tuple thereof, not {type(test).__name__}')

    # def proceed():
    #     nonlocal token, last
    #     try:
    #         last = token
    #         token = next(tokens)
    #         if last is not None:
    #             return last.string
    #     except StopIteration as e:
    #         raise DataParseError(f'unexpected end of token stream', at=(filename, *token.end, token.line)) from e

    # def skip_blanks():
    #     nonlocal last
    #     temp = last
    #     while token.type in (NEWLINE, INDENT, DEDENT, NL):
    #         proceed()
    #     last = temp

    # # -------------------------------------

    # #region constants
    # if python_constants:
    #     INFINITY = 'inf'
    #     NAN = 'nan'
    #     TRUE = 'True'
    #     FALSE = 'False'
    #     NONE = 'None'
    # else:
    #     INFINITY = 'Infinity'
    #     NAN = 'NaN'
    #     TRUE = 'true'
    #     FALSE = 'false'
    #     NONE = 'null'
    # P_INFINITY = '+' + INFINITY
    # N_INFINITY = '-' + INFINITY
    # INFINITY_J = INFINITY + 'J'
    # INFINITY_j = INFINITY + 'j'
    # P_INFINITY_J = P_INFINITY + 'J'
    # P_INFINITY_j = P_INFINITY + 'j'
    # N_INFINITY_J = N_INFINITY + 'J'
    # N_INFINITY_j = N_INFINITY + 'j'
    # P_NAN = '+' + NAN
    # N_NAN = '-' + NAN
    # NAN_J = NAN + 'J'
    # NAN_j = NAN + 'j'
    # P_NAN_J = P_NAN + 'J'
    # P_NAN_j = P_NAN + 'j'
    # N_NAN_J = N_NAN + 'J'
    # N_NAN_j = N_NAN + 'j'

    # P_INFINITY_Jj = (P_INFINITY_J, P_INFINITY_j)
    # N_INFINITY_Jj = (N_INFINITY_J, N_INFINITY_j)
    # P_NAN_Jj = (P_NAN_J, P_NAN_j)
    # N_NAN_Jj = (N_NAN_J, N_NAN_j)

    # NUM_CONSTANTS = (INFINITY, P_INFINITY, N_INFINITY, NAN, P_NAN, N_NAN, INFINITY_J, INFINITY_j, P_INFINITY_J, P_INFINITY_j, N_INFINITY_J, N_INFINITY_j, NAN_J, NAN_j, P_NAN_J, P_NAN_j, N_NAN_J, N_NAN_j)
    # OTHER_CONSTANTS = (TRUE, FALSE, NONE)
    # #endregion

    # def parse_key():
    #     if token.type == STRING:
    #         result = ast.literal_eval(proceed())
    #     else:
    #         last = token
    #         result = expect((NAME, STRING, NUMBER))
    #         if allow_Infinity_and_NaN and result in NUM_CONSTANTS or result in OTHER_CONSTANTS:
    #             raise DataParseError(f"invalid key {result!r}", last, filename)
    #     return result

    # def parse_value():
    #     if token.string == '[':
    #         return parse_list()
    #     elif token.string == '{':
    #         obj = parse_inline_object()
    #         expect(NEWLINE)
    #         return obj
    #     elif token.type == NEWLINE:
    #         return parse_object(allow_list=True)
    #     else:
    #         return parse_simple_value()

    # def parse_inline_value():
    #     if token.string == '[':
    #         return parse_inline_list()
    #     elif token.string == '{':
    #         return parse_inline_object()
    #     else:
    #         return parse_simple_inline_value()

    # def parse_simple_value():
    #     value = parse_simple_inline_value()
    #     expect(NEWLINE)
    #     return value  

    # def parse_number_suffix(result):
    #     if isinstance(result, (int, float)):
    #         if token.type == NUMBER:
    #             if token.string[-1] not in 'jJ':
    #                 raise DataParseError(f"syntax error at token {tok_name[token.exact_type]}", token, filename)
    #             result += ast.literal_eval(proceed())
    #         elif allow_Infinity_and_NaN:
    #             if accept(P_INFINITY_Jj):
    #                 result = complex(result, math.inf)
    #             elif accept(N_INFINITY_Jj):
    #                 result = complex(result, -math.inf)
    #             elif accept((P_NAN_Jj, N_NAN_Jj)):
    #                 result = complex(result, math.nan)
    #     return result

    # def parse_simple_inline_value():
    #     return parse_simple_inline_value_0(token, proceed, accept)

    # def parse_simple_inline_value_0(token, proceed, accept):
    #     if token.type == NUMBER:
    #         result = ast.literal_eval(proceed())
    #         if not isinstance(result, complex):
    #             result = parse_number_suffix(result)
    #         return result
    #     # elif token.exact_type == PLUS:
    #     #     proceed()
    #     #     if accept(INFINITY):
    #     #         return math.inf if allow_Infinity_and_NaN else INFINITY
    #     #     elif accept(NAN):
    #     #         return math.nan if allow_Infinity_and_NaN else NAN
    #     #     if token.type != NUMBER:
    #     #         raise DataParseError(f"syntax error at token {tok_name[token.exact_type]}", token, filename)
    #     #     return parse_simple_inline_value()
    #     # elif token.exact_type == MINUS:
    #     #     proceed()
    #     #     if accept(INFINITY):
    #     #         return -math.inf if allow_Infinity_and_NaN else N_INFINITY
    #     #     elif accept(NAN):
    #     #         return -math.nan if allow_Infinity_and_NaN else N_NAN
    #     #     if token.type != NUMBER:
    #     #         raise DataParseError(f"syntax error at token {tok_name[token.exact_type]}", token, filename)
    #     #     result = -ast.literal_eval(proceed())
    #     #     if not isinstance(result, complex) and token.string in ('+', '-'):
    #     #         neg = token.string == '-'
    #     #         proceed()
    #     #         if token.type != NUMBER or token.string[-1] not in 'jJ':
    #     #             raise DataParseError(f"syntax error at token {tok_name[token.exact_type]}", token, filename)
    #     #         x = ast.literal_eval(proceed())
    #     #         if neg:
    #     #             result -= x
    #     #         else:
    #     #             result += x
    #     #     return result
    #     elif token.type == STRING:
    #         return ast.literal_eval(proceed())
    #     elif accept(TRUE):
    #         return True
    #     elif accept(FALSE):
    #         return False
    #     elif accept(NONE):
    #         return None
    #     elif allow_Infinity_and_NaN and accept((INFINITY, P_INFINITY)):
    #         return parse_number_suffix(math.inf)
    #     elif allow_Infinity_and_NaN and accept(N_INFINITY):
    #         return parse_number_suffix(-math.inf)
    #     elif allow_Infinity_and_NaN and accept((NAN, P_NAN)):
    #         return parse_number_suffix(math.nan)
    #     elif allow_Infinity_and_NaN and token.string == N_NAN:
    #         proceed()
    #         return parse_number_suffix(-math.nan)
    #     elif allow_Infinity_and_NaN and accept((INFINITY_J, INFINITY_j, P_INFINITY_Jj)):
    #         return complex(0, math.inf)
    #     elif allow_Infinity_and_NaN and accept(N_INFINITY_Jj):
    #         return complex(0, -math.inf)
    #     elif allow_Infinity_and_NaN and accept((NAN_J, NAN_j, P_NAN_Jj)):
    #         return complex(0, math.nan)
    #     elif allow_Infinity_and_NaN and accept(N_NAN_Jj):
    #         return complex(0, -math.nan)
    #     elif token.type == NAME:
    #         return proceed()
    #     else:
    #         raise DataParseError(f"syntax error at token {tok_name[token.exact_type]} {token.string!r}", token, filename)

    # def parse_key_value():
    #     key = parse_key()
    #     expect(':')
    #     value = parse_key_value_rest()
    #     return key, value

    # def parse_key_value_rest():
    #     if token.type in (NAME, STRING, NUMBER):
    #         last_token = token
    #         proceed()
    #         if accept(':'):
    #             if last_token.type == STRING:
    #                 key = ast.literal_eval(last_token.string)
    #             else:
    #                 key = last_token.string
    #             return { (key): parse_key_value_rest() }
    #         else:
    #             called = False
    #             def _proceed():
    #                 nonlocal called
    #                 if called:
    #                     return proceed()
    #                 else:
    #                     called = True
    #                     return last_token.string
    #             def _accept(test):
    #                 nonlocal called
    #                 if called:
    #                     return accept(test)
    #                 elif tok_match(last_token, test):
    #                     called = True
    #                     return last_token.string
    #             return parse_simple_inline_value_0(last_token, _proceed, _accept)
    #     else:
    #         return parse_value()

    # def parse_inline_key_value():
    #     key = parse_key()
    #     skip_blanks()
    #     expect(':')
    #     skip_blanks()
    #     last_token = token
    #     value = parse_inline_value()
    #     skip_blanks()
    #     if last_token.type in (NAME, STRING, NUMBER) and accept(':'):
    #         skip_blanks()
    #         if last_token.type == STRING:
    #             key = ast.literal_eval(last_token.string)
    #         else:
    #             key = last_token.string
    #         value = { (key): parse_inline_value() }
        
    #     return key, value

    # def parse_object(allow_list=False, allow_brackets=True):
    #     expect(NEWLINE)
    #     if allow_brackets and token.string == '{':
    #         obj = parse_inline_object()
    #         expect(NEWLINE)
    #         return obj
    #     elif allow_list and token.string == '[':
    #         return parse_list()
    #     expect(INDENT)
    #     if allow_brackets and token.string == '{':
    #         obj = parse_inline_object()
    #         expect(NEWLINE)
    #         expect(DEDENT)
    #         return obj
    #     elif allow_list and token.string == '[':
    #         lst = parse_list()
    #         expect(DEDENT)
    #         return lst
    #     obj = {}
    #     while token.type != DEDENT:
    #         start_token = token
    #         key, value = parse_key_value()
    #         if key in obj:
    #             raise DataParseError(f"duplicate key {key!r}", start_token, filename)
    #         obj[key] = value
    #     expect(DEDENT)
    #     return obj

    # def parse_inline_object():
    #     expect('{')
    #     if token.type == NEWLINE:
    #         obj = parse_object(allow_brackets=False)
    #     else:
    #         skip_blanks()
    #         obj = {}
    #         if token.string != '}':
    #             key, value = parse_inline_key_value()
    #             obj[key] = value
    #             skip_blanks()
    #             if accept(','):
    #                 skip_blanks()
    #                 if token.string != '}':
    #                     start_token = token
    #                     key, value = parse_inline_key_value()
    #                     if key in obj:
    #                         raise DataParseError(f"duplicate key {key!r}", start_token, filename)
    #                     obj[key] = value
    #                     skip_blanks()
    #                     while accept(','):
    #                         skip_blanks()
    #                         if token.string == '}':
    #                             break
    #                         start_token = token
    #                         key, value = parse_inline_key_value()
    #                         if key in obj:
    #                             raise DataParseError(f"duplicate key {key!r}", start_token, filename)
    #                         obj[key] = value
    #                         skip_blanks()

    #             elif token.string != '}':
    #                 start_token = token
    #                 key, value = parse_inline_key_value()
    #                 if key in obj:
    #                     raise DataParseError(f"duplicate key {key!r}", start_token, filename)
    #                 obj[key] = value
    #                 skip_blanks()
    #                 while token.string != '}':
    #                     start_token = token
    #                     key, value = parse_inline_key_value()
    #                     if key in obj:
    #                         raise DataParseError(f"duplicate key {key!r}", start_token, filename)
    #                     obj[key] = value
    #                     skip_blanks()

    #     expect('}')
    #     return obj

    # def parse_list():
    #     lst = parse_inline_list()
    #     expect(NEWLINE)
    #     return lst
    #     # expect('[')
    #     # lst = []
    #     # if accept(NL):
    #     #     skip_blanks()
    #     #     if token.string != ']':
    #     #         lst.append(parse_inline_value())
    #     #         if accept(','):
    #     #             skip_blanks()                               # ⎫
    #     #             if token.string != ']':                     # ⎪
    #     #                 lst.append(parse_inline_value())        # ⎪
    #     #                 skip_blanks()                           # ⎪
    #     #                 while accept(','):                      # ⎩ ___ 1
    #     #                     skip_blanks()                       # ⎧
    #     #                     if token.string == ']':             # ⎪
    #     #                         break                           # ⎪
    #     #                     lst.append(parse_inline_value())    # ⎪ 
    #     #                     skip_blanks()                       # ⎭

    #     #         elif accept(NL):
    #     #             skip_blanks()
    #     #             if accept(','):
    #     #                 skip_blanks()                               # ⎫
    #     #                 if token.string != ']':                     # ⎪
    #     #                     lst.append(parse_inline_value())        # ⎪
    #     #                     skip_blanks()                           # ⎪
    #     #                     while accept(','):                      # ⎩ ___ 1
    #     #                         skip_blanks()                       # ⎧
    #     #                         if token.string == ']':             # ⎪
    #     #                             break                           # ⎪
    #     #                         lst.append(parse_inline_value())    # ⎪ 
    #     #                         skip_blanks()                       # ⎭

    #     #             elif token.string != ']':
    #     #                 lst.append(parse_inline_value())
    #     #                 while accept(NL):
    #     #                     skip_blanks()
    #     #                     if token.string == ']':
    #     #                         break
    #     #                     lst.append(parse_inline_value())

    #     #         elif token.string != ']':
    #     #             expect((NL, ',')) # raises error
                    
    #     # else:
    #     #     skip_blanks()
    #     #     if token.string != ']':
    #     #         lst.append(parse_inline_value())
    #     #         skip_blanks()
    #     #         while accept(','):
    #     #             skip_blanks()
    #     #             if token.string == ']':
    #     #                 break
    #     #             lst.append(parse_inline_value())
    #     #             skip_blanks()

    #     # expect(']')
    #     # expect(NEWLINE)
    #     # return lst

    # def parse_inline_list():
    #     expect('[')
    #     lst = []
    #     skip_blanks()
    #     if token.string != ']':
    #         last_token = token
    #         lst.append(parse_inline_value())
    #         skip_blanks()
    #         if last_token.type in (NAME, STRING, NUMBER) and accept(':'):
    #             skip_blanks()
    #             obj = {}
    #             lst.append(obj)
    #             if last_token.type == STRING:
    #                 key = ast.literal_eval(last_token.string)
    #             else:
    #                 key = last_token.string
    #             obj[key] = parse_inline_value()
    #             skip_blanks()
    #             while token.string != ']' and token.type != ENDMARKER:
    #                 key, value = parse_inline_key_value()
    #                 skip_blanks()
    #                 if key in obj:
    #                     obj = {}
    #                     lst.append(obj)
    #                 obj[key] = value

    #         else:       
    #             skip_blanks()
    #             if accept(','):
    #                 skip_blanks()
    #                 if token.string != ']':
    #                     lst.append(parse_inline_value())
    #                     skip_blanks()
    #                     while accept(','):
    #                         skip_blanks()
    #                         if token.string == ']':
    #                             break
    #                         lst.append(parse_inline_value())
    #                         skip_blanks()
                
    #             elif token.string != ']':
    #                 lst.append(parse_inline_value())
    #                 skip_blanks()
    #                 while token.string != ']' and token.type != ENDMARKER:
    #                     lst.append(parse_inline_value())
    #                     skip_blanks()

    #     expect(']')
    #     return lst

    # # -------------------------------------

    # proceed()

    # if token.string == '{':
    #     obj = parse_inline_object()
    #     accept(NEWLINE)

    # elif token.type != ENDMARKER:
    #     obj = {}
    #     key, value = parse_key_value()
    #     obj[key] = value

    #     while token.type != ENDMARKER:
    #         start_token = token
    #         key, value = parse_key_value()
    #         if key in obj:
    #             raise DataParseError(f"duplicate key {key!r}", start_token, filename)
    #         obj[key] = value

    #     if token.type != ENDMARKER:
    #         if token.type == INDENT:
    #             raise DataParseError("unexpected indent", filename, token)
    #         elif token.type == DEDENT:
    #             raise DataParseError("unexpected dedent", filename, token)
    #         else:
    #             raise DataParseError(f"unexpected token {tok_name[token.exact_type]!r}", filename, token)

    # else:
    #     obj = {}

    # return obj

Value = Union[set, list, tuple, dict, str, int, float, complex, None]
TokenTest = Union[str, int, Iterable[Union[str, int]]]

class DataParser:
    key_types = (NAME, STRING, NUMBER)
    num_list_start = re.compile(r"(?:0+(?:_+0+)*_*1|1)\.")

    def num_list_regex(self, num):
        def test(token):
            return token.type == NUMBER and token.string.endswith('.') and int(token.string[:-1]) == num
        return test

    def __init__(self, tokens: Iterable[TokenInfo], filename='<unknown source>', allow_Infinity_and_NaN=True, python_constants=True, allow_imports=True):
        if not isinstance(filename, str):
            raise TypeError(f"'filename' must be a string, not {type(filename).__name__!r}")
        self.tokens = LookAheadListIterator(tokens)
        if len(self.tokens) == 0:
            raise ValueError("invalid token list: no tokens given")
        if self.tokens[-1].type != ENDMARKER:
            raise ValueError("invalid token list: did not end with an ENDMARKER token")
        self.tokens.default = self.tokens[-1]
        self.filename = filename
        self.allow_inf_nan = allow_Infinity_and_NaN
        self.allow_imports = allow_imports
        self.import_globals = {
            'set': set,
            'tuple': tuple,
            'dict': dict,
            'str': str,
            'int': int,
            'float': float,
            'complex': complex,
            'frozenset': frozenset,
            'bytearray': bytearray,
            'bytes': bytes,
            'chr': chr,
            'ord': ord,
            'sorted': sorted,
            'range': range,
            'reversed': reversed,
            'namedtuple': namedtuple,
            'deque': deque,
            'Counter': Counter,
            'OrderedDict': OrderedDict
        }
        if allow_imports:
            self.import_locals = {}
        self.references = ChainMap()
        self.names = []
        if python_constants:
            self.inf = 'inf'
            self.nan = 'nan'
            self.true = 'True'
            self.false = 'False'
            self.none = 'None'
        else:
            self.inf = 'Infinity'
            self.nan = 'NaN'
            self.true = 'true'
            self.false = 'false'
            self.none = 'null'
        self.ninf = '-' + self.inf
        self.nnan = '-' + self.nan
        pinf = '+' + self.inf
        pnan = '+' + self.nan
        self.inf = (self.inf, pinf)
        self.nan = (self.nan, pnan)
        self.infj = (*(x+'j' for x in self.inf), *(x+'J' for x in self.inf))
        self.pinfj = (pinf + 'j', pinf + 'J')
        self.nanj = (*(x+'j' for x in self.nan), *(x+'J' for x in self.nan))
        self.pnanj = (pnan + 'j', pnan + 'J')
        self.ninfj = (self.ninf + 'j', self.ninf + 'J')
        self.nnanj = (self.nnan + 'j', self.nnan + 'J')
        if self.token.type == ENCODING:
            next(self.tokens)
        # Skip leading comments
        while self.token.type == COMMENT:
            last = self.token
            next(self.tokens)
            if self.token.type == NEWLINE:
                idx = last.line.index(last.string)
                sub = last.line[0:idx]
                if sub == "" or sub.isspace():
                    next(self.tokens)

        class ScopeManager:
            def __init__(self, parser):
                self.parser = parser
            def __enter__(self): pass
            def __exit__(self, exc_typ, exc_val, exc_tb):
                del self.parser.references.maps[0]
                if not (exc_typ or exc_val or exc_tb) and hasattr(self.parser, 'value'):
                    self.parser.references.maps[-1][self.parser.current_name] = self.parser.value
                    if len(self.parser.names) > 1:
                        self.parser.references[self.parser.names[-1]] = self.parser.value
                    del self.parser.value
                del self.parser.names[-1]

        self._scope = ScopeManager(self)

    @property
    def current_name(self) -> str:
        return '.'.join(self.names)
        
    @property
    def token(self) -> TokenInfo:
        return self.tokens.current

    @property
    def last(self) -> TokenInfo:
        return self.tokens.last

    def next(self) -> str:
        result = self.token.string
        next(self.tokens)
        while self.token.type == COMMENT:
            last = self.token
            next(self.tokens)
            if self.token.type == NEWLINE:
                idx = last.line.index(last.string)
                sub = last.line[0:idx]
                if sub == "" or sub.isspace():
                    next(self.tokens)
        return result

    def _test_str(self, test: TokenTest) -> str:
        if isinstance(test, int):
            return tok_name[test]
        elif isinstance(test, (str, re.Pattern)):
            return repr(test)
        else:
            return join_natural((self._test_str(x) for x in test), word='or')

    def _tok_str(self, token: TokenInfo) -> str:
        if token.type in (NL, INDENT, DEDENT, ENDMARKER, ENCODING):
            return tok_name[token.type]
        elif token.type == STRING:
            return token.string
        else:
            return repr(token.string)

    def tok_match(self, token: TokenInfo, test: TokenTest) -> bool:
        if isinstance(test, str):
            return token.string == test
        elif isinstance(test, int):
            return token.exact_type == test
        elif isinstance(test, re.Pattern):
            return bool(test.match(token.string))
        elif callable(test):
            return bool(test(token))
        else:
            for subtest in test:
                if self.tok_match(token, subtest):
                    return True
            return False

    def eat(self, *tests: Tuple[TokenTest, ...], looped=False) -> Union[str, None]:
        self.tokens.push_marker()
        last = None
        for test in tests:
            if looped and self.token.type == ENDMARKER:
                self.tokens.pop_marker(reset=False)
                return True
            if not self.tok_match(self.token, test):
                self.tokens.pop_marker(reset=True)
                return None
            last = self.token.string or True
            self.next()
        self.tokens.pop_marker(reset=False)
        return last

    def test(self, *tests: Tuple[TokenTest, ...], looped=False) -> bool:
        self.tokens.push_marker()
        for test in tests:
            if looped and self.token.type == ENDMARKER:
                self.tokens.pop_marker(reset=False)
                return True
            if not self.tok_match(self.token, test):
                self.tokens.pop_marker(reset=True)
                return False
            self.next()
        self.tokens.pop_marker(reset=True)
        return True

    def expect(self, *tests: Tuple[TokenTest, ...]) -> Union[str, None]:
        result = self.eat(*tests)
        if not result:
            raise self.expected(*tests)
        return result
